// Vitest Snapshot v1

exports[`formats > ios-swift/any.swift > should match default snapshot 1`] = `
"
//
// __output/
//

// Do not edit directly
// Generated on Thu, 01 Sep 2022 04:36:21 GMT


import UIKit

public class StyleDictionary {
    public static let colorBaseRed = UIColor(red: 1.000, green: 0.000, blue: 0.000, alpha: 1)
}
"
`;

exports[`formats > ios-swift/any.swift > with access control override should match snapshot 1`] = `
"
//
// __output/
//

// Do not edit directly
// Generated on Thu, 01 Sep 2022 04:36:21 GMT


import UIKit

internal class StyleDictionary {
    internal static let colorBaseRed = UIColor(red: 1.000, green: 0.000, blue: 0.000, alpha: 1)
}
"
`;

exports[`formats > ios-swift/any.swift > with import override should match snapshot 1`] = `
"
//
// __output/
//

// Do not edit directly
// Generated on Thu, 01 Sep 2022 04:36:21 GMT


import UIKit
import AnotherModule

public class StyleDictionary {
    public static let colorBaseRed = UIColor(red: 1.000, green: 0.000, blue: 0.000, alpha: 1)
}
"
`;

exports[`formats > ios-swift/any.swift > with objectType override should match snapshot 1`] = `
"
//
// __output/
//

// Do not edit directly
// Generated on Thu, 01 Sep 2022 04:36:21 GMT


import UIKit

public struct StyleDictionary {
    public static let colorBaseRed = UIColor(red: 1.000, green: 0.000, blue: 0.000, alpha: 1)
}
"
`;
